--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <nav>
           <ul class="navbar">
             <li class="navbar__item">
-              <a class="navbar__link__logo" lang="en" href="index.html"
-                ><span lang="en" class="navbar__link__logo--blue">Web</span>Studio</a
+              <a class="navbar__link-logo" lang="en" href="index.html"
+                ><span lang="en" class="navbar__link-logo--blue">Web</span>Studio</a
               >
             </li>
             <li class="navbar__item"><a class="navbar__link not-page current-page" href="index.html">Студия</a></li>
