--- a/index.html
+++ b/index.html
@@ -469,60 +469,60 @@
       <!-- Footer Section -->
       <footer>
         <div class="container set">
-          <section class="footer__section__address">
+          <section class="footer__section-address">
             <h2 class="semantical">Semantical H2</h2>
-            <a class="footer__link__logo" lang="en" href="index.html"
-              ><span lang="en" class="footer__link__logo--blue">Web</span>Studio</a
+            <a class="footer__link-logo" lang="en" href="index.html"
+              ><span lang="en" class="footer__link-logo--blue">Web</span>Studio</a
             >
-            <address class="footer_address">
-              <ul class="footer__address__list">
-                <li class="footer__address__item">
-                  <a class="footer__address__link--location"
+            <address class="footer-address">
+              <ul class="footer-address__list">
+                <li class="footer-address__item">
+                  <a class="footer-address__link--location"
                     href="https://goo.gl/maps/kUcczkRKr7FWd2e16"
                     target="_blank"
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
                 </li>
-                <li class="footer__address__item">
-                  <a class="footer__address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="footer-address__item">
+                  <a class="footer-address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="footer__address__item"><a class="footer__address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="footer-address__item"><a class="footer-address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
               </ul>
             </address>
           </section>
-          <section class="footer__section__links">
+          <section class="footer__section-links">
             <h2 class="semantical">Semantical H2</h2>
-            <h3 class="footer__links__title">Присоединяйтесь</h3>
-            <ul class="footer__links__list">
-              <li class="footer__links__item">
-                <a class="footer__links__link" href="#"
-                  ><svg class="footer__links__icon" width="20px" height="20px">
+            <h3 class="footer-links__title">Присоединяйтесь</h3>
+            <ul class="footer-links__list">
+              <li class="footer-links__item">
+                <a class="footer-links__link" href="#"
+                  ><svg class="footer-links__icon" width="20px" height="20px">
                     <use xlink:href="./img/icons.svg#instagram"></use></svg></a>
               </li>
-              <li class="footer__links__item">
-                <a class="footer__links__link" href="#"
-                  ><svg class="footer__links__icon" width="20px" height="20px">
+              <li class="footer-links__item">
+                <a class="footer-links__link" href="#"
+                  ><svg class="footer-links__icon" width="20px" height="20px">
                     <use xlink:href="./img/icons.svg#twitter"></use></svg></a>
               </li>
-              <li class="footer__links__item">
-                <a class="footer__links__link" href="#"
-                  ><svg class="footer__links__icon" width="20px" height="20px">
+              <li class="footer-links__item">
+                <a class="footer-links__link" href="#"
+                  ><svg class="footer-links__icon" width="20px" height="20px">
                     <use xlink:href="./img/icons.svg#facebook"></use></svg></a>
               </li>
-              <li class="footer__links__item">
-                <a class="footer__links__link" href="#"
-                  ><svg class="footer__links__icon" width="20px" height="20px">
+              <li class="footer-links__item">
+                <a class="footer-links__link" href="#"
+                  ><svg class="footer-links__icon" width="20px" height="20px">
                     <use xlink:href="./img/icons.svg#linkedin"></use></svg></a>
               </li>
             </ul>
           </section>
-          <section class="footer__section__form">
+          <section class="footer__section-form">
             <h2 class="semantical">Semantical H2</h2>
-            <h3 class="footer__form__title">Подпишитесь на рассылку</h3>
-            <form action="" class="footer__form" placeholder=" ">
-              <label class="footer__form__label" for="">
-                <input class="footer__form__input" type="email" placeholder="E-mail" name="email">
-                <button class="footer__form__button" type="submit">Подписаться <svg class="footer__form__button__icon" width="24px" height="24px">
+            <h3 class="footer-form__title">Подпишитесь на рассылку</h3>
+            <form action="" class="footer-form" placeholder=" ">
+              <label class="footer-form__label" for="">
+                <input class="footer-form__input" type="email" placeholder="E-mail" name="email">
+                <button class="footer-form__button" type="submit">Подписаться <svg class="footer-form__button-icon" width="24px" height="24px">
                   <use xlink:href="./img/icons.svg#icon-send"></use></svg></button>
               </label>
             </form>
