--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
         <nav>
           <ul class="navbar">
             <li class="navbar__item">
-              <a class="navbar__link__logo" lang="en" href="index.html"
-                ><span lang="en" class="navbar__link__logo--blue">Web</span>Studio</a
+              <a class="navbar__link-logo" lang="en" href="index.html"
+                ><span lang="en" class="navbar__link-logo--blue">Web</span>Studio</a
               >
             </li>
             <li class="navbar__item"><a class="navbar__link not-page" href="index.html">Студия</a></li>
@@ -79,7 +79,7 @@
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
@@ -90,13 +90,13 @@
                 alt="Notebook wit opened site"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Технокряк</h3>
-              <p class="overlay__card__text">Веб-сайт</p>
+              <h3 class="card__title">Технокряк</h3>
+              <p class="card__text">Веб-сайт</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -106,13 +106,13 @@
                 alt="Poster New Orleans vs Golden Star"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Постер New Orlean vs Golden Star</h3>
-              <p class="overlay__card__text">Дизайн</p>
+              <h3 class="card__title">Постер New Orlean vs Golden Star</h3>
+              <p class="card__text">Дизайн</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -122,13 +122,13 @@
                 alt="Restaurant logo SeaFood"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Ресторан Seafood</h3>
-              <p class="overlay__card__text">Приложение</p>
+              <h3 class="card__title">Ресторан Seafood</h3>
+              <p class="card__text">Приложение</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -138,25 +138,25 @@
                 alt="PC headphones"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Проект Prime</h3>
-              <p class="overlay__card__text">Маркетинг</p>
+              <h3 class="card__title">Проект Prime</h3>
+              <p class="card__text">Маркетинг</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
               </div>
               <img src="./img/boxes.jpg" alt="Two boxes" style="width: 370px" />
-              <h3 class="overlay__card__title">Проект Boxes</h3>
-              <p class="overlay__card__text">Приложение</p>
+              <h3 class="card__title">Проект Boxes</h3>
+              <p class="card__text">Приложение</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -166,13 +166,13 @@
                 alt="Desktop screen with opened site"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Inspiration has no Borders</h3>
-              <p class="overlay__card__text">Веб-сайт</p>
+              <h3 class="card__title">Inspiration has no Borders</h3>
+              <p class="card__text">Веб-сайт</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -182,13 +182,13 @@
                 alt="Opened book with images"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Издание Limited Edition</h3>
-              <p class="overlay__card__text">Дизайн</p>
+              <h3 class="card__title">Издание Limited Edition</h3>
+              <p class="card__text">Дизайн</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -198,13 +198,13 @@
                 alt="Label Mark"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Проект LAB</h3>
-              <p class="overlay__card__text">Маркетинг</p>
+              <h3 class="card__title">Проект LAB</h3>
+              <p class="card__text">Маркетинг</p>
             </li>
             <li class="projects__item">
               <div class="projects__overlay">
                 <div class="overlay__card">
-                <p class="overlay__card__text--blue">
+                <p class="card__text--blue">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cupiditate provident excepturi, voluptas impedit minus!
                 </p>
               </div>
@@ -214,8 +214,8 @@
                 alt="Opened notebook on table"
                 style="width: 370px"
               />
-              <h3 class="overlay__card__title">Growing Business</h3>
-              <p class="overlay__card__text">Приложение</p>
+              <h3 class="card__title">Growing Business</h3>
+              <p class="card__text">Приложение</p>
             </li>
           </ul>
         </div>
@@ -224,60 +224,60 @@
     <!-- Footer Section -->
     <footer>
       <div class="container set">
-        <section class="footer__section__address">
+        <section class="footer__section-address">
           <h2 class="semantical">Semantical H2</h2>
-          <a class="footer__link__logo" lang="en" href="index.html"
-            ><span lang="en" class="footer__link__logo--blue">Web</span>Studio</a
+          <a class="footer__link-logo" lang="en" href="index.html"
+            ><span lang="en" class="footer__link-logo--blue">Web</span>Studio</a
           >
-          <address class="footer_address">
-            <ul class="footer__address__list">
-              <li class="footer__address__item">
-                <a class="footer__address__link--location"
+          <address class="footer-address">
+            <ul class="footer-address__list">
+              <li class="footer-address__item">
+                <a class="footer-address__link--location"
                   href="https://goo.gl/maps/kUcczkRKr7FWd2e16"
                   target="_blank"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="footer__address__item">
-                <a class="footer__address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="footer-address__item">
+                <a class="footer-address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
-              <li class="footer__address__item"><a class="footer__address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+              <li class="footer-address__item"><a class="footer-address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
           </address>
         </section>
-        <section class="footer__section__links">
+        <section class="footer__section-links">
           <h2 class="semantical">Semantical H2</h2>
-          <h3 class="footer__links__title">Присоединяйтесь</h3>
-          <ul class="footer__links__list">
-            <li class="footer__links__item">
-              <a class="footer__links__link" href="#"
-                ><svg class="footer__links__icon" width="20px" height="20px">
+          <h3 class="footer-links__title">Присоединяйтесь</h3>
+          <ul class="footer-links__list">
+            <li class="footer-links__item">
+              <a class="footer-links__link" href="#"
+                ><svg class="footer-links__icon" width="20px" height="20px">
                   <use xlink:href="./img/icons.svg#instagram"></use></svg></a>
             </li>
-            <li class="footer__links__item">
-              <a class="footer__links__link" href="#"
-                ><svg class="footer__links__icon" width="20px" height="20px">
+            <li class="footer-links__item">
+              <a class="footer-links__link" href="#"
+                ><svg class="footer-links__icon" width="20px" height="20px">
                   <use xlink:href="./img/icons.svg#twitter"></use></svg></a>
             </li>
-            <li class="footer__links__item">
-              <a class="footer__links__link" href="#"
-                ><svg class="footer__links__icon" width="20px" height="20px">
+            <li class="footer-links__item">
+              <a class="footer-links__link" href="#"
+                ><svg class="footer-links__icon" width="20px" height="20px">
                   <use xlink:href="./img/icons.svg#facebook"></use></svg></a>
             </li>
-            <li class="footer__links__item">
-              <a class="footer__links__link" href="#"
-                ><svg class="footer__links__icon" width="20px" height="20px">
+            <li class="footer-links__item">
+              <a class="footer-links__link" href="#"
+                ><svg class="footer-links__icon" width="20px" height="20px">
                   <use xlink:href="./img/icons.svg#linkedin"></use></svg></a>
             </li>
           </ul>
         </section>
-        <section class="footer__section__form">
+        <section class="footer__section-form">
           <h2 class="semantical">Semantical H2</h2>
-          <h3 class="footer__form__title">Подпишитесь на рассылку</h3>
-          <form action="" class="footer__form" placeholder=" ">
-            <label class="footer__form__label" for="">
-              <input class="footer__form__input" type="email" placeholder="E-mail" name="email">
-              <button class="footer__form__button" type="submit">Подписаться <svg class="footer__form__button__icon" width="24px" height="24px">
+          <h3 class="footer-form__title">Подпишитесь на рассылку</h3>
+          <form action="" class="footer-form" placeholder=" ">
+            <label class="footer-form__label" for="">
+              <input class="footer-form__input" type="email" placeholder="E-mail" name="email">
+              <button class="footer-form__button" type="submit">Подписаться <svg class="footer-form__button-icon" width="24px" height="24px">
                 <use xlink:href="./img/icons.svg#icon-send"></use></svg></button>
             </label>
           </form>
